--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,8 @@ table {
   box-shadow: 2px 2px 4px gray;
   padding: 1em;
   background-color: #f8f4d8;
+  width: 100%;
+  max-height: 100%;
 }
 
 h4 {
@@ -84,6 +86,8 @@ td:hover {
 aside {
   width: 40%;
   margin: auto;
+  max-height: 100%;
+  overflow-y: scroll;
 }
 
 section {
