--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+/* index.css */
+
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&family=Lobster&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,9 +15,11 @@ body {
   background-size: cover;
   /* background by SVGBackgrounds.com */
 }
+
 #root {
   width: 100vw;
 }
+
 .App {
   height: 100vh;
   width: 100%;
@@ -147,4 +152,45 @@ footer ul li {
 footer ul li:hover {
   list-style-type: none;
   color: rgb(255, 99, 3);
+}
+
+.close-order {
+  background-color: orange;
+  color: #333;
+  border: none;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.close-order:hover {
+  background-color: darkorange; 
+}
+
+.order-btn {
+  background-color: hsl(36, 100%, 50%);
+  border: none;
+  padding: 1em;
+  margin-left: 8em;
+  border-radius: 5px;
+  margin-right: 4em;
+  margin-top: 3em;
+}
+
+.current-order {
+  border: 2px solid hsl(49, 84%, 80%);
+  border-radius: 20px;
+  h2 {
+    margin-left: 2rem;
+  }
+}
+
+.remove-item {
+  background-color: transparent;
+  border: none;
+}
+
+.quantity-btn {
+  background-color: transparent;
+  border: gray;
 }
