--- a/src/index.css
+++ b/src/index.css
@@ -35,11 +35,12 @@ h4 {
   color: #333;
 }
 
-table {
+.menu_container {
   border: 5px solid gray;
   box-shadow: 2px 2px 4px gray;
   padding: 1em;
   background-color: #f8f4d8;
+  display: grid;
 }
 
 h4 {
@@ -67,20 +68,34 @@ main {
 }
 
 .item-name {
-  width: 210px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  width: auto;
 }
-td {
-  padding: 0.5em;
-  text-align: center;
-  vertical-align: center;
-  min-width: 2em;
-  text-overflow: clip;
-}
-td:hover {
+
+.item-name:hover {
   cursor: pointer;
   opacity: 0.7;
 }
-
+.item_description{
+  text-align: center;
+}
+.current_items_container{
+  margin: 0;
+  height: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
+  strong{
+    color: red;
+    font-size: 20px;
+    cursor: pointer;
+  }
+}
 aside {
   width: 40%;
   margin: auto;
@@ -140,6 +155,7 @@ footer ul {
 }
 
 footer ul li {
+  cursor: pointer;
   list-style-type: none;
   color: black;
 }
